feat: Supabase 푸시 알림 시스템 추가
- PWA 설정 (manifest.json, sw.js)
- Supabase 클라이언트 및 푸시 훅 구현
- Edge Function (send-push) 연동
- VAPID 키 기반 Web Push 지원

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+.env
+.env.local
+.env.*.local
+*.pem
 node_modules
 dist
 dist-ssr
